<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculadora de Viajes</string>
    <string name="calculadora_de_viajes">CALCULADORA DE VIAJES</string>
    <string name="transporte">Transporte</string>
    <string name="autob_s_100">Autobús - 100</string>
    <string name="cantidad_personas_transporte">Cantidad personas transporte</string>
    <string name="propio_50">Propio - 50</string>
    <string name="hotel">Hotel</string>
    <string name="precio_0">Precio = 0 €</string>
    <string name="cantidad_personas_ocio">Cantidad personas ocio</string>
    <string name="cultural_200">Cultural - 200</string>
    <string name="fiestas_100">Fiestas - 100</string>
    <string name="libro_50">Libro - 50</string>
    <string name="ocio">Ocio</string>
    <string name="cantidad_personas_comida">Cantidad personas comida</string>
    <string name="desayuno_50">Desayuno - 50</string>
    <string name="media_100">Media - 100</string>
    <string name="completa_200">Completa - 200</string>
    <string name="comida">Comida</string>
    <string name="cantidad_personas_hotel">Cantidad personas hotel</string>
    <string name="m_laga_palacio_200">Málaga Palacio - 200</string>
    <string name="ibis_500">Ibis - 500</string>
    <string name="hilton_300">Hilton - 300</string>
    <string name="avi_n_800">Avión - 800</string>
    <string name="tren_150">Tren - 150</string>
</resources>
